Fixing about page spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -840,7 +840,7 @@ ul{
 
 #about section {
 	position: relative;
-	top: -125px;
+	top: -75px;
 }
 
 #lesson .bottom_links {
